--- a/kakuro.css
+++ b/kakuro.css
@@ -30,30 +30,77 @@ table#board td {
 	width: var(--cellSize);
 	height: var(--cellSize);
 }
-#board .none {
-	background-color: var(--dividerColor);
+
+/* sizing and spacing for none, empty, cell, cell-possible */
+/* all of these are css grids */
+table#board td > * {
 	width: 100%;
 	height: 100%;
+	text-align: center;
+	align-items: center;
 }
-#board .cell {
-	font-size: var(--valueFontHeight);
+
+#board .none {
+	background-color: var(--dividerColor);
+
+	/* doesn't actually have any content */
+}
+
+#board .empty {
+	background-color: var(--dividerColor);
+
+	/* 4x4 grid, only 2 are used */
 	display: grid;
-	grid-template-columns: auto;
-	justify-content: center;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
+	grid-template-areas:
+		". right"
+		"down .";
+}
+#board .empty .right {
+	grid-area: right;
+}
+#board .empty .down {
+	grid-area: down;
+}
+#board .empty::after {
+	/* add a diagonal line */
+	content: " ";
+	position: absolute;
+	border-width: 0.5px;
+	border-style: solid;
+	border-color: var(--primaryColor);
+	width: calc(var(--cellSize) * 1.4142);
+	transform-origin: 1px 0;
+	transform: rotate(45deg);
+}
+
+#board .cell {
 	font-weight: lighter;
+	font-size: var(--valueFontHeight);
+	background-color: var(--textPrimaryColor);
+
+	/* 1x1 grid, mostly for the sake of centering numbers */
+	display: grid;
+	grid-template-rows: 1fr;
+	grid-template-columns: 1fr;
 }
 #board .cell.invalid {
 	color: var(--accentColor);
 }
+
 #board .cell-possible {
 	color: var(--secondaryTextColor);
+	background-color: var(--textPrimaryColor);
+
+	/* 9x9 grid */
 	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-gap: 0;
-	justify-content: space-evenly;
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
+/* make sure we know where the cursor is */
 #board td.focus,
-#board td.focus .none {
+#board td.focus > * {
 	background-color: var(--lightPrimaryColor);
 }
