--- a/kakuro.css
+++ b/kakuro.css
@@ -54,13 +54,14 @@ table#board td > * {
 }
 
 #board .none {
-	background-color: var(--primaryColor);
+	background-color: var(--dividerColor);
 
 	/* doesn't actually have any content */
 }
 
 #board .empty {
-	background-color: var(--dividerColor);
+	background-color: var(--primaryColor);
+	color: var(--textPrimaryColor);
 
 	/* 4x4 grid, only 2 are used */
 	display: grid;
@@ -82,7 +83,7 @@ table#board td > * {
 	position: absolute;
 	border-width: 0.5px;
 	border-style: solid;
-	border-color: var(--primaryColor);
+	border-color: var(--textPrimaryColor);
 	width: calc(var(--cellSize) * 1.4142);
 	transform-origin: 1px 0;
 	transform: rotate(45deg);
