ui stuff for inputs

--- a/kakuro.css
+++ b/kakuro.css
@@ -55,9 +55,12 @@ button {
 	border: none;
 	font-weight: bold;
 	cursor: pointer;
+	margin: 0 0.5em 0.5em 0;
 }
-button + button {
-	margin-left: 0.5em;
+button[disabled] {
+	color: var(--textPrimaryColor);
+	background-color: var(--dividerColor);
+	cursor: not-allowed;
 }
 .btn-primary {
 	color: var(--textPrimaryColor);
