--- a/kakuro.css
+++ b/kakuro.css
@@ -45,6 +45,11 @@ p {
 	border-radius: 0.5em;
 }
 
+.ng-hide.ng-hide-animate {
+	opacity: 0;
+	transition: opacity 1s ease-in-out;
+}
+
 .badge {
 	border-radius: 0.5em;
 	padding: 0 0.5em;
