redo layout for Keys dl dt/dd

--- a/lib/kakuro.css
+++ b/lib/kakuro.css
@@ -265,14 +265,15 @@ table#board td > * {
 	margin-bottom: -0.5em; /* undo ths extra space from the buttons */
 }
 
-#keys-summary dl dt {
-	width: 8ch;
-	display: inline-block;
+#keys-summary dl {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-column-gap: 1ch;
 }
-#keys-summary dl dd {
-	display: inline;
+#keys-summary dl dt.section {
+	font-size: 1.15em;
+	grid-column: 1 / 3;
 }
-#keys-summary dl dd::after {
-	content: " ";
-	display: block;
+#keys-summary dl dt:not(.section) {
+	margin-left: 1ch;
 }
