--- a/lib/kakuro.css
+++ b/lib/kakuro.css
@@ -22,6 +22,10 @@ h1, h2, h3, h3, h4, h5, h6 {
 h1 {
 	font-size: 3em;
 }
+small {
+	font-size: 0.8em;
+	opacity: 0.8;
+}
 p {
 	margin-bottom: 0.5em;
 }
