starting to move values to input/computed

--- a/lib/quilts/quilts.css
+++ b/lib/quilts/quilts.css
@@ -10,10 +10,14 @@
 	display: grid;
 	grid-template-rows: auto auto;
 	grid-template-columns: 1fr 1fr;
-	grid-column-gap: 1em;
+	grid-gap: 1em;
+	grid-template-areas:
+		"input picture"
+		"metrics picture";
 }
 
 svg {
+	grid-area: picture;
 	border: none;
 	/* border: 2px solid magenta; */
 	margin: 0 auto;
@@ -30,6 +34,14 @@ svg {
 .c2 { fill: gold; background-color: gold; }
 .c3 { fill: seagreen; background-color: seagreen; }
 .c4 { fill: cornflowerblue; background-color: cornflowerblue; }
+
+#input {
+	grid-area: input;
+}
+
+#metrics {
+	grid-area: metrics;
+}
 
 .swatch {
 	width: 1em;
