--- a/lib/quilts/quilts.css
+++ b/lib/quilts/quilts.css
@@ -48,6 +48,19 @@ svg {
 	grid-area: input;
 }
 
+#input table {
+	font-size: 2em;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+#input table td:hover::after {
+	content: " ";
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.2);
+	display: block;
+}
+
 #metrics {
 	grid-area: metrics;
 }
@@ -64,5 +77,7 @@ svg {
 .swatch {
 	width: 1em;
 	height: 1em;
+}
+.swatch:not(td) {
 	display: inline-block;
 }
