--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -1,7 +1,17 @@
-
 * {
 	margin: 0;
 	padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: sans-serif;
+	font-weight: lighter;
+	margin-top: 0.75em;
+	margin-bottom: 0.25em;
+}
+
+h2:first-child {
+	margin-top: 0;
 }
 
 .container {
@@ -25,6 +35,10 @@ svg {
 	margin: 0 auto;
 }
 
+.quiltEdgeMask {
+	fill: none;
+	stroke: rgba(255,255,255, 0.6);
+}
 .quiltEdge {
 	fill: none;
 	stroke: #888;
@@ -58,7 +72,6 @@ svg {
 	grid-column-gap: 1ch;
 }
 #metrics dl dt {
-	margin-left: 1ch;
 	white-space: nowrap;
 }
 
