--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -14,6 +14,12 @@ h2:first-child {
 	margin-top: 0;
 }
 
+button.addColor {
+	height: 23px;
+	position: relative;
+	top: -3px;
+}
+
 .container {
 	margin: 1em;
 
