--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -34,7 +34,7 @@ button.addColor {
 		"metrics picture";
 }
 
-svg {
+#quilt {
 	grid-area: picture;
 	border: none;
 	/* border: 2px solid magenta; */
@@ -67,6 +67,19 @@ svg {
 
 #input {
 	grid-area: input;
+}
+
+#input .col {
+	display: inline-block;
+	margin-right: -1px;
+}
+#input .row, #input .col {
+	margin-bottom: -5px; /* HACK remove some whitespace, no idea why it's here */
+}
+#input .row .col svg {
+	border: 1px solid black;
+	width: 50px;
+	height: 50px;
 }
 
 #metrics {
