--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -69,6 +69,14 @@ button.addColor {
 	width: 50px;
 	height: 50px;
 }
+#input svg .clickable {
+	cursor: pointer;
+	fill: rgba(0,0,0,0);
+}
+#input svg .clickable:hover {
+	stroke: red;
+	stroke-width: 0.01;
+}
 
 #metrics {
 	grid-area: metrics;
