--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -18,6 +18,7 @@ button.addColor {
 	height: 23px;
 	position: relative;
 	top: -3px;
+	left: -3px;
 }
 
 .container {
@@ -55,6 +56,15 @@ button.addColor {
 
 #input {
 	grid-area: input;
+}
+
+#input .colorSelection > * {
+	margin-right: 6px;
+}
+#input .colorSelection input[type="radio"] {
+	position: relative;
+	top: -3px;
+	left: 1px;
 }
 
 #input .col {
