--- a/lib/mazes/mazes.css
+++ b/lib/mazes/mazes.css
@@ -31,8 +31,8 @@ table td.unvisited {
 	background-color:   #F5F5F5;
 }
 table td.visited {
-	background-color:   #B6B6B6;
+	background-color:   #D2D2D2;
 }
 table td.active {
-	background-color:   #727272;
+	background-color:   #898989;
 }
