--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -14,11 +14,21 @@ h2:first-child {
 	margin-top: 0;
 }
 
-button.addColor {
+label {
+	font-weight: bold;
+	width: 12ch;
+	display: inline-block;
+}
+
+button {
 	height: 23px;
+	padding: 0 1ch;
 	position: relative;
 	top: -3px;
 	left: -3px;
+	cursor: pointer;
+
+	margin-left: 6px;
 }
 
 .container {
@@ -92,6 +102,9 @@ button.addColor {
 
 #metrics {
 	grid-area: metrics;
+}
+#metrics dt {
+	font-weight: bold;
 }
 #metrics dl {
 	display: grid;
