--- a/lib/quilts2/quilts.css
+++ b/lib/quilts2/quilts.css
@@ -6,7 +6,7 @@
 h1, h2, h3, h4, h5, h6 {
 	font-family: sans-serif;
 	font-weight: lighter;
-	margin-top: 0.75em;
+	margin-top: 1em;
 	margin-bottom: 0.25em;
 }
 
@@ -21,7 +21,7 @@ label {
 }
 
 p {
-	margin-bottom: 3px;
+	margin-bottom: 4px;
 }
 
 button {
@@ -124,6 +124,7 @@ button:hover {
 }
 #metrics dt {
 	font-weight: bold;
+	padding-bottom: 4px;
 }
 #metrics dl {
 	display: grid;
